Add proxy + headers